Bug 614229 - nsHttpHandler getting the private-browsing service can cause recursive initialization of layout, and I suspect can cause incorrect behavior in Firefox because we may end up creating HTTP URIs before we're finished with XPCOM registration, r=honza+ehsan a=blocking bug 581335 which blocks Fennec b3